[package]
name = "bodega-khajiit"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]

[dependencies]
egg-mode = "0.12.0"
image = "0.19.0"
rusttype = "0.6.2"
tokio-core = "0.1.17"
dotenv = "0.13.0"
env_logger = "0.5.11"
log = "0.4.3"
serde = "1.0.70"
im = { version = "11.0.1", features = ["serde"] }
serde_json = "1.0.24"
hyper = "0.12.7"
hyper-rustls = "0.14.0"
futures = "0.1.23"
