[package]
name = "bodega-khajiit"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]

[dependencies]
rusttype = "0.7.5"
tokio-core = "0.1.17"
dotenv = "0.13.0"
env_logger = "0.6.0"
log = "0.4.3"
hyper = "0.12.7"
hyper-rustls = "0.16.0"
futures = "0.1.23"
postgres = "0.15.2"

[dependencies.image]
version = "0.21.0"
default-features = false
features = ["jpeg", "jpeg_rayon"]

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs.git"
rev = "8491554282f5e8a43f9144208198b756ce5ed07a"
